Main_Folder/MY_PROJECTS/timer/src/App.scss
.App {
  text-align: center;
  background-color: #6fb1d8;
  //background-image: linear-gradient(blue, white);
  #circle{
    margin: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    border-style: solid;
    border-width: 2px;
    border-color: blue;
    background-color: rgba(0, 0, 0, 0);
  }
  button{
    margin: auto;
    width: 36px;
    height: 36px;
    border-radius: 50%;
    border-width: 0;
    box-shadow: 1px 1px 5px 1px white,-1px -1px 5px white,-1px 1px 5px white,1px -1px 5px white;
    background-color: blue;
    color:white;
    background-image: linear-gradient(red, yellow)
    
  }
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

@media(max-width:390px){
  
  button{
    width: 36px;
    height: 36px;
    border-radius: 50%;
    background-color: blue;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

